--- a/style.css
+++ b/style.css
@@ -1,23 +1,45 @@
 .grid{
 	width: 1000px;
-	height: 1000px;
+	height: 1000px auto;
 	margin: 50px auto;
 	background-color: #fff;
 	padding: 10px 50px 30px 50px;
-	border: 2px solid #ccc;
-	border-radius: 10px;
+	border: 2px solid #999;
+}
+#title{
+	text-align: center;
+  margin: 10px 50px auto;
 }
 .grid h1{
-	font-size: 2.4em;
-	text-align: center;
-}
-.grid p{
 	text-align: center;
 }
 td {
   text-align: center;
 }
 table {
-   margin-left:auto;
-   margin-right:auto;
+  margin-left:auto;
+  margin-right:auto;
 }
+.line {
+  width: 150px;
+  height: 150px;
+  padding: 20px;
+}
+.btn { 
+  width: 150px;
+  height: 150px;
+	border: 2px solid #D1A863;
+	border-radius: 20px;
+	background-color: #D1A863; 
+	color: white;
+	font-size: 22px;
+	transition: 0.5s;
+}
+.btn:nth-child(2n){ margin-right: 0; }
+.btn:hover{
+	cursor: pointer;
+	border: 2px solid #D1A8AA;
+	background-color: #D1A8AA;
+	color: white;
+}
+.btn:focus{ outline: 0; }
