--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ table {
   height: 150px;
   padding: 20px;
 }
+
+.icon:nth-child(2n){ margin-right: 0; }
+.icon:hover{
+	cursor: pointer;
+}
+.icon:focus{ outline: 0; }
 .btn { 
   width: 150px;
   height: 150px;
