--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
 	padding: 10px 50px 30px 50px;
 	border: 2px solid #999;
 }
+#grid2 {
+	text-align: center;
+	width: 800px;
+	height: 600px auto;
+	margin: 50px auto;
+	background-color: #fff;
+	padding: 10px 50px 30px 50px;
+	border: 2px solid #999;
+}
 #title{
 	text-align: center;
   margin: 10px 50px auto;
