--- a/style.css
+++ b/style.css
@@ -58,3 +58,21 @@ table {
 	color: white;
 }
 .btn:focus{ outline: 0; }
+
+body {
+  margin: 0;
+  padding: 0;
+}
+.container {
+  width: 1000px;
+  height: 800px;
+  margin: auto;
+  position: relative;
+}
+
+canvas {
+  position: absolute;
+}
+#canvas {
+  background: #555;
+}
