--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 	padding: 10px 50px 30px 50px;
 	border: 2px solid #999;
 }
-#grid2 {
+.grid2 {
 	text-align: center;
 	width: 800px;
 	height: 600px auto;
